# Chess

./: .gitignore  CMakeLists.txt  Makefile  build.sh  make  test.sh
include/: Bishop.h  Board.h  ChessPiece.h  ClassDeclarations.h  CommonHeaders.h  Errors.h  King.h  Knight.h  Pawn.h  Position.h  Queen.h  Rook.h  TeamColors.h
include/board/: Board.h  BoardStateGenerator.h
include/game/: GameManager.h
include/pieces/: Bishop.h  ChessPiece.h  JumpType.h  King.h  Knight.h  Pawn.h  Queen.h  Rook.h  SpecialPieces.h
include/util/: CommonHeaders.h  Errors.h  FENManager.h  PieceGenerator.h  Position.h
src/: Bishop.cpp  Board.cpp  ChessPiece.cpp  Knight.cpp  Position.cpp  Queen.cpp  Rook.cpp  main.cpp
src/board/: Board.cpp  BoardStateGenerator.cpp
src/game/: GameManager.cpp
src/pieces/: Bishop.cpp  ChessPiece.cpp  King.cpp  Knight.cpp  Pawn.cpp  Queen.cpp  Rook.cpp
src/util/: FENManager.cpp  PieceGenerator.cpp  Position.cpp
test/: CMakeLists.txt  KingTest.cpp
test/game/: GameManagerTest.cpp
test/pieces/: BishopTest.cpp  KingTest.cpp  KnightTest.cpp  PawnTest.cpp  QueenTest.cpp  RookTest.cpp
